--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -179,8 +179,9 @@
         </div>
     </nav>
  <div class="image-gallery">
+      <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
     <div class="image-item" onclick="openModal(0)">
-      <img src="./gallery/jj.jpg" alt="Image 1">
+      <img src="./gallery/aa.jpg" alt="Image 1">
       <div class="caption">Caption for Image 1</div>
     </div>
     <div class="image-item" onclick="openModal(1)">
@@ -192,12 +193,44 @@
       <div class="caption">Caption for Image 3</div>
     </div>
     <div class="image-item" onclick="openModal(3)">
-      <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Image 4">
+      <img src="./gallery/kk.jpg" alt="Image 4">
       <div class="caption">Caption for Image 4</div>
     </div>
     <div class="image-item" onclick="openModal(4)">
       <img src="images/jj.jpg" alt="Image 5">
       <div class="caption">Caption for Image 5</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/ii.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/hh.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/gg.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/ff.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/ee.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/dd.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/cc.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
+    </div>
+     <div class="image-item" onclick="openModal(1)">
+      <img src="./gallery/bb.jpg" alt="Image 2">
+      <div class="caption">Caption for Image 2</div>
     </div>
   </div>
 
@@ -215,11 +248,21 @@
   <script>
     let currentImageIndex = 0;
     const images = [
-      { src: "C:/Users/hp/Desktop/college/gallery/jj.jpg", caption: "Caption for Image 1" },
-      { src: "C:/Users/hp/Desktop/college/gallery/aa.jpg", caption: "Caption for Image 2" },
-      { src: "C:/Users/hp/Desktop/college/gallery/jj.jpg", caption: "Caption for Image 3" },
-      { src: "C:/Users/hp/Desktop/college/gallery/aa.jpg", caption: "Caption for Image 4" },
-      { src: "images/jj.jpg", caption: "Caption for Image 5" }
+         { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
+
+        
+         { src: "./gallery/ff.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/kk.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/jj.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/ii.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/hh.jpg", caption: "Caption for Image 1" },
+         { src: "./gallery/gg.jpg", caption: "Caption for Image 1" },
+      { src: "./gallery/ff.jpg", caption: "Caption for Image 1" },
+      { src: "./gallery/ee.jpg", caption: "Caption for Image 2" },
+      { src: "./gallery/dd.jpg", caption: "Caption for Image 3" },
+      { src: "./gallery/cc.jpg", caption: "Caption for Image 4" },
+      { src: "./gallery/bb.jpg", caption: "Caption for Image 5" }
     ];
 
     // Function to open the modal with full-size image and caption
