--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -178,13 +178,14 @@
             </div>
         </div>
     </nav>
+    <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
  <div class="image-gallery">
-      <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
-    <div class="image-item" onclick="openModal(0)">
+      
+    <div class="./gallery/aa.jpg" onclick="openModal(0)">
       <img src="./gallery/aa.jpg" alt="Image 1">
       <div class="caption">Caption for Image 1</div>
     </div>
-    <div class="image-item" onclick="openModal(1)">
+    <div class="./gallery/aa.jpg" onclick="openModal(1)">
       <img src="./gallery/aa.jpg" alt="Image 2">
       <div class="caption">Caption for Image 2</div>
     </div>
