--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -6,150 +6,160 @@
     <title>Government Girls College</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        /* Global Styles */
-        body {
-            font-size: 1rem;
-            line-height: 1.2;
-            margin: 0;
-            padding: 0;
-            background: #E0FFFF;
-        }
+   
+<style>
+  /* Global Styles */
+  body {
+    font-size: 1rem; /* Base font size */
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+    background: #E0FFFF;
+  }
 
-        /* Custom Navbar Color and Padding */
-        .navbar-custom {
-            background-color: #FFF8DC;
-            padding-left: 2vw;
-            padding-right: 2vw;
-        }
+  /* Custom Navbar Color and Padding */
+  .navbar-custom {
+    background-color: #FFF8DC;
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
 
-        .navbar a:hover {
-            background-color: #9b1d38;
-            border-radius: 0.25rem;
-        }
-   /* Image Gallery */
-    .image-gallery {
-      width: 100%;
-      padding: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
+  .navbar a:hover {
+    background-color: #9b1d38;
+    border-radius: 0.25rem;
+  }
 
+  /* Image Gallery */
+  .image-gallery {
+    width: 100%;
+    padding: 2vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2vw;
+  }
+
+  .image-item {
+    position: relative;
+    cursor: pointer;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 25vw; /* Width as percentage of viewport width */
+    height: 25vw; /* Height proportional to width */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
+  }
+
+  .image-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures that the image covers the entire container without distortion */
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+  }
+
+  /* Image scaling on hover */
+  .image-item img:hover {
+    transform: scale(1.1);
+  }
+
+  /* Position caption at the bottom */
+  .caption {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 1rem;
+    border-radius: 5px;
+    margin: 0;
+  }
+
+  /* Modal (Full-Screen View) */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+  }
+
+  .modal-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .modal-close {
+    position: absolute;
+    top: 2vw;
+    right: 2vw;
+    color: white;
+    font-size: 3rem;
+    cursor: pointer;
+  }
+
+  .modal-nav {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3rem;
+    color: white;
+    cursor: pointer;
+    z-index: 2000;
+  }
+
+  .modal-prev {
+    left: 2vw;
+  }
+
+  .modal-next {
+    right: 2vw;
+  }
+
+  /* Mobile Responsiveness */
+  @media (max-width: 768px) {
     .image-item {
-      position: relative;
-      cursor: pointer;
-      border-radius: 8px;
-      overflow: hidden;
-      width: 200px; /* Fixed width for all images */
-      height: 200px; /* Fixed height for all images */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
+      width: 45vw; /* Adjusted for tablet or medium-sized screens */
+      height: 45vw; /* Maintain proportional scaling */
     }
 
-    .image-item img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Ensures that the image covers the entire container without distortion */
-      border-radius: 8px;
-      transition: transform 0.3s ease;
-    }
-
-    /* Image scaling on hover */
-    .image-item img:hover {
-      transform: scale(1.1);
-    }
-
-    /* Position caption at the bottom */
     .caption {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      text-align: center;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 5px;
-      border-radius: 5px;
-      margin: 0;
+      font-size: 1.2rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .image-item {
+      width: 60vw; /* Adjusted for smaller mobile screens */
+      height: 60vw; /* Maintain proportional scaling */
     }
 
-    /* Modal (Full-Screen View) */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
+    .caption {
+      font-size: 1rem;
     }
+  }
 
-    .modal-content {
-      position: relative;
-      max-width: 90%;
-      max-height: 90%;
-    }
+  /* Prevent image drag */
+  img {
+    user-drag: none;
+  }
+</style>
 
-    .modal-content img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    .modal-close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: white;
-      font-size: 30px;
-      cursor: pointer;
-    }
-
-    .modal-nav {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 30px;
-      color: white;
-      cursor: pointer;
-      z-index: 2000;
-    }
-
-    .modal-prev {
-      left: 20px;
-    }
-
-    .modal-next {
-      right: 20px;
-    }
-
-    /* Mobile Responsiveness */
-    @media (max-width: 768px) {
-      .image-item {
-        width: 150px; /* Adjusted for tablet or medium-sized screens */
-        height: 150px; /* Same height */
-      }
-    }
-
-    @media (max-width: 480px) {
-      .image-item {
-        width: 120px; /* Adjusted for smaller mobile screens */
-        height: 120px; /* Same height */
-      }
-    }
-
-    /* Prevent image drag */
-    img {
-      user-drag: none;
-    }
-       
-    </style>
 </head>
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
