--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -6,160 +6,158 @@
     <title>Government Girls College</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-   
-<style>
-  /* Global Styles */
-  body {
-    font-size: 1rem; /* Base font size */
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
-    background: #E0FFFF;
-  }
+    <style>
+        /* Global Styles */
+        body {
+            font-size: 1rem; /* Base font size */
+            line-height: 1.5;
+            margin: 0;
+            padding: 0;
+            background: #E0FFFF;
+        }
 
-  /* Custom Navbar Color and Padding */
-  .navbar-custom {
-    background-color: #FFF8DC;
-    padding-left: 2vw;
-    padding-right: 2vw;
-  }
+        /* Custom Navbar Color and Padding */
+        .navbar-custom {
+            background-color: #FFF8DC;
+            padding-left: 2vw;
+            padding-right: 2vw;
+        }
 
-  .navbar a:hover {
-    background-color: #9b1d38;
-    border-radius: 0.25rem;
-  }
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
 
-  /* Image Gallery */
-  .image-gallery {
-    width: 100%;
-    padding: 2vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2vw;
-  }
+        /* Image Gallery */
+        .image-gallery {
+            width: 100%;
+            padding: 2vw;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2vw;
+        }
 
-  .image-item {
-    position: relative;
-    cursor: pointer;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 25vw; /* Width as percentage of viewport width */
-    height: 25vw; /* Height proportional to width */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
-  }
+        .image-item {
+            position: relative;
+            cursor: pointer;
+            border-radius: 8px;
+            overflow: hidden;
+            width: 25vw; /* Width as percentage of viewport width */
+            height: 25vw; /* Height proportional to width */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
+        }
 
-  .image-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensures that the image covers the entire container without distortion */
-    border-radius: 8px;
-    transition: transform 0.3s ease;
-  }
+        .image-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures that the image covers the entire container without distortion */
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
 
-  /* Image scaling on hover */
-  .image-item img:hover {
-    transform: scale(1.1);
-  }
+        /* Image scaling on hover */
+        .image-item img:hover {
+            transform: scale(1.1);
+        }
 
-  /* Position caption at the bottom */
-  .caption {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 1rem;
-    border-radius: 5px;
-    margin: 0;
-  }
+        /* Position caption at the bottom */
+        .caption {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 1rem;
+            border-radius: 5px;
+            margin: 0;
+        }
 
-  /* Modal (Full-Screen View) */
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
+        /* Modal (Full-Screen View) */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
 
-  .modal-content {
-    position: relative;
-    max-width: 90%;
-    max-height: 90%;
-  }
+        .modal-content {
+            position: relative;
+            max-width: 90%;
+            max-height: 90%;
+        }
 
-  .modal-content img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
+        .modal-content img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
 
-  .modal-close {
-    position: absolute;
-    top: 2vw;
-    right: 2vw;
-    color: white;
-    font-size: 3rem;
-    cursor: pointer;
-  }
+        .modal-close {
+            position: absolute;
+            top: 2vw;
+            right: 2vw;
+            color: white;
+            font-size: 3rem;
+            cursor: pointer;
+        }
 
-  .modal-nav {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 3rem;
-    color: white;
-    cursor: pointer;
-    z-index: 2000;
-  }
+        .modal-nav {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 3rem;
+            color: white;
+            cursor: pointer;
+            z-index: 2000;
+        }
 
-  .modal-prev {
-    left: 2vw;
-  }
+        .modal-prev {
+            left: 2vw;
+        }
 
-  .modal-next {
-    right: 2vw;
-  }
+        .modal-next {
+            right: 2vw;
+        }
 
-  /* Mobile Responsiveness */
-  @media (max-width: 768px) {
-    .image-item {
-      width: 45vw; /* Adjusted for tablet or medium-sized screens */
-      height: 45vw; /* Maintain proportional scaling */
-    }
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            .image-item {
+                width: 45vw; /* Adjusted for tablet or medium-sized screens */
+                height: 45vw; /* Maintain proportional scaling */
+            }
 
-    .caption {
-      font-size: 1.2rem;
-    }
-  }
+            .caption {
+                font-size: 1.2rem;
+            }
+        }
 
-  @media (max-width: 480px) {
-    .image-item {
-      width: 60vw; /* Adjusted for smaller mobile screens */
-      height: 60vw; /* Maintain proportional scaling */
-    }
+        @media (max-width: 480px) {
+            .image-item {
+                width: 60vw; /* Adjusted for smaller mobile screens */
+                height: 60vw; /* Maintain proportional scaling */
+            }
 
-    .caption {
-      font-size: 1rem;
-    }
-  }
+            .caption {
+                font-size: 1rem;
+            }
+        }
 
-  /* Prevent image drag */
-  img {
-    user-drag: none;
-  }
-</style>
-
+        /* Prevent image drag */
+        img {
+            user-drag: none;
+        }
+    </style>
 </head>
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
@@ -188,153 +186,143 @@
             </div>
         </div>
     </nav>
+
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
- <div class="image-gallery">
-      
-    <div class="./gallery/aa.jpg" onclick="openModal(0)">
-      <img src="./gallery/aa.jpg" alt="Image 1">
-      <div class="caption">Caption for Image 1</div>
-    </div>
-    <div class="./gallery/aa.jpg" onclick="openModal(1)">
-      <img src="./gallery/aa.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-    <div class="image-item" onclick="openModal(2)">
-      <img src="./gallery/jj.jpg" alt="Image 3">
-      <div class="caption">Caption for Image 3</div>
-    </div>
-    <div class="image-item" onclick="openModal(3)">
-      <img src="./gallery/kk.jpg" alt="Image 4">
-      <div class="caption">Caption for Image 4</div>
-    </div>
-    <div class="image-item" onclick="openModal(4)">
-      <img src="images/jj.jpg" alt="Image 5">
-      <div class="caption">Caption for Image 5</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/ii.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/hh.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/gg.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/ff.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/ee.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/dd.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/cc.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-     <div class="image-item" onclick="openModal(1)">
-      <img src="./gallery/bb.jpg" alt="Image 2">
-      <div class="caption">Caption for Image 2</div>
-    </div>
-  </div>
 
-  <!-- Modal for Full Image View -->
-  <div class="modal" id="imageModal">
-    <span class="modal-close" onclick="closeModal()">&times;</span>
-    <span class="modal-nav modal-prev" onclick="changeImage(-1)">&#10094;</span>
-    <span class="modal-nav modal-next" onclick="changeImage(1)">&#10095;</span>
-    <div class="modal-content">
-      <img id="fullImage" src="" alt="Full Image">
-      <div id="modalCaption" class="caption"></div>
+    <div class="image-gallery">
+        <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/aa.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+        <div class="image-item" onclick="openModal(1)">
+            <img src="./gallery/aa.jpg" alt="Image 2">
+            <div class="caption">Caption for Image 2</div>
+        </div>
+        <div class="image-item" onclick="openModal(2)">
+            <img src="./gallery/jj.jpg" alt="Image 3">
+            <div class="caption">Caption for Image 3</div>
+        </div>
+        <div class="image-item" onclick="openModal(3)">
+            <img src="./gallery/kk.jpg" alt="Image 4">
+            <div class="caption">Caption for Image 4</div>
+        </div>
+        <div class="image-item" onclick="openModal(4)">
+            <img src="images/jj.jpg" alt="Image 5">
+            <div class="caption">Caption for Image 5</div>
+        </div>
+        <div class="image-item" onclick="openModal(5)">
+            <img src="./gallery/ii.jpg" alt="Image 6">
+            <div class="caption">Caption for Image 6</div>
+        </div>
+        <div class="image-item" onclick="openModal(6)">
+            <img src="./gallery/hh.jpg" alt="Image 7">
+            <div class="caption">Caption for Image 7</div>
+        </div>
+        <div class="image-item" onclick="openModal(7)">
+            <img src="./gallery/gg.jpg" alt="Image 8">
+            <div class="caption">Caption for Image 8</div>
+        </div>
+        <div class="image-item" onclick="openModal(8)">
+            <img src="./gallery/ff.jpg" alt="Image 9">
+            <div class="caption">Caption for Image 9</div>
+        </div>
+        <div class="image-item" onclick="openModal(9)">
+            <img src="./gallery/ee.jpg" alt="Image 10">
+            <div class="caption">Caption for Image 10</div>
+        </div>
+        <div class="image-item" onclick="openModal(10)">
+            <img src="./gallery/dd.jpg" alt="Image 11">
+            <div class="caption">Caption for Image 11</div>
+        </div>
+        <div class="image-item" onclick="openModal(11)">
+            <img src="./gallery/cc.jpg" alt="Image 12">
+            <div class="caption">Caption for Image 12</div>
+        </div>
+        <div class="image-item" onclick="openModal(12)">
+            <img src="./gallery/bb.jpg" alt="Image 13">
+            <div class="caption">Caption for Image 13</div>
+        </div>
     </div>
-  </div>
 
-  <script>
-    let currentImageIndex = 0;
-    const images = [
-         { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
+    <!-- Modal for Full Image View -->
+    <div class="modal" id="imageModal">
+        <span class="modal-close" onclick="closeModal()">&times;</span>
+        <span class="modal-nav modal-prev" onclick="changeImage(-1)">&#10094;</span>
+        <span class="modal-nav modal-next" onclick="changeImage(1)">&#10095;</span>
+        <div class="modal-content">
+            <img id="fullImage" src="" alt="Full Image">
+            <div id="modalCaption" class="caption"></div>
+        </div>
+    </div>
 
-        
-         { src: "./gallery/ff.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/kk.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/jj.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/ii.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/hh.jpg", caption: "Caption for Image 1" },
-         { src: "./gallery/gg.jpg", caption: "Caption for Image 1" },
-      { src: "./gallery/ff.jpg", caption: "Caption for Image 1" },
-      { src: "./gallery/ee.jpg", caption: "Caption for Image 2" },
-      { src: "./gallery/dd.jpg", caption: "Caption for Image 3" },
-      { src: "./gallery/cc.jpg", caption: "Caption for Image 4" },
-      { src: "./gallery/bb.jpg", caption: "Caption for Image 5" }
-    ];
+    <script>
+        let currentImageIndex = 0;
+        const images = [
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/ii.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/hh.jpg", caption: "Caption for Image 6" },
+            { src: "./gallery/gg.jpg", caption: "Caption for Image 7" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/dd.jpg", caption: "Caption for Image 10" },
+            { src: "./gallery/cc.jpg", caption: "Caption for Image 11" },
+            { src: "./gallery/bb.jpg", caption: "Caption for Image 12" }
+        ];
 
-    // Function to open the modal with full-size image and caption
-    function openModal(index) {
-      currentImageIndex = index;
-      const { src, caption } = images[currentImageIndex];
-      updateModalContent(src, caption);
-      const modal = document.getElementById("imageModal");
-      modal.style.display = "flex";
-      modal.classList.add('show');
-    }
+        // Function to open the modal with full-size image and caption
+        function openModal(index) {
+            currentImageIndex = index;
+            const { src, caption } = images[currentImageIndex];
+            updateModalContent(src, caption);
+            const modal = document.getElementById("imageModal");
+            modal.style.display = "flex";
+        }
 
-    // Function to change the image (Previous / Next)
-    function changeImage(direction) {
-      currentImageIndex += direction;
+        // Function to change the image (Previous / Next)
+        function changeImage(direction) {
+            currentImageIndex += direction;
+            if (currentImageIndex < 0) currentImageIndex = images.length - 1;
+            else if (currentImageIndex >= images.length) currentImageIndex = 0;
 
-      // Ensure the index is within bounds
-      if (currentImageIndex < 0) {
-        currentImageIndex = images.length - 1;
-      } else if (currentImageIndex >= images.length) {
-        currentImageIndex = 0;
-      }
+            const { src, caption } = images[currentImageIndex];
+            updateModalContent(src, caption);
+        }
 
-      const { src, caption } = images[currentImageIndex];
-      updateModalContent(src, caption);
-    }
+        // Function to update the modal content
+        function updateModalContent(imageSrc, captionText) {
+            document.getElementById("fullImage").src = imageSrc;
+            document.getElementById("modalCaption").innerText = captionText;
+        }
 
-    // Function to update the modal content
-    function updateModalContent(imageSrc, captionText) {
-      document.getElementById("fullImage").src = imageSrc;
-      document.getElementById("modalCaption").innerText = captionText;
-    }
+        // Function to close the modal
+        function closeModal() {
+            const modal = document.getElementById("imageModal");
+            modal.style.display = "none";
+        }
 
-    // Function to close the modal
-    function closeModal() {
-      const modal = document.getElementById("imageModal");
-      modal.style.display = "none";
-      modal.classList.remove('show');
-    }
+        // Close the modal when clicking outside the modal content
+        document.getElementById("imageModal").addEventListener("click", function (e) {
+            if (e.target === document.getElementById("imageModal")) {
+                closeModal();
+            }
+        });
 
-    // Close the modal when clicking outside the modal content
-    document.getElementById("imageModal").addEventListener("click", function (e) {
-      if (e.target === document.getElementById("imageModal")) {
-        closeModal();
-      }
-    });
+        // Prevent right-click to stop downloading images
+        document.querySelectorAll('img').forEach(image => {
+            image.addEventListener('contextmenu', (event) => {
+                event.preventDefault();
+                alert('Right-click is disabled. Image download is not allowed.');
+            });
 
-    // Prevent right-click to stop downloading images
-    document.querySelectorAll('img').forEach(image => {
-      image.addEventListener('contextmenu', (event) => {
-        event.preventDefault();
-        alert('Right-click is disabled. Image download is not allowed.');
-      });
-
-      // Prevent image dragging
-      image.addEventListener('dragstart', (event) => {
-        event.preventDefault();
-      });
-    });
-  </script>
+            // Prevent image dragging
+            image.addEventListener('dragstart', (event) => {
+                event.preventDefault();
+            });
+        });
+    </script>
 
 </body>
-
 </html>
