--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -69,7 +69,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            text-align: center;
+            text-align: bottom;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
             padding: 1rem;
@@ -88,7 +88,7 @@
             background-color: rgba(0, 0, 0, 0.9);
             justify-content: center;
             align-items: center;
-            z-index: 1000;
+            z-index: 100;
         }
 
         .modal-content {
