--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -69,7 +69,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            text-align: bottom;
+            text-align: center;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
             padding: 1rem;
@@ -119,7 +119,7 @@
             font-size: 3rem;
             color: white;
             cursor: pointer;
-            z-index: 2000;
+            z-index: 1000;
         }
 
         .modal-prev {
