--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -214,65 +214,106 @@
             <div id="modalCaption" class="caption"></div>
         </div>
     </div>
+<script>
+    let currentImageIndex = 0;
+    const images = [
+        { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
+        { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
+        { src: "./gallery/kk.jpg", caption: "Caption for Image 3" },
+        { src: "./gallery/jj.jpg", caption: "Caption for Image 4" }
+    ];
 
-    <script>
-        let currentImageIndex = 0;
-        const images = [
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
-            { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 4" }
-        ];
+    function adjustImageSize() {
+        const imageItems = document.querySelectorAll('.image-item img');
+        const windowWidth = window.innerWidth;
 
-        function openModal(index) {
-            currentImageIndex = index;
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
-            const modal = document.getElementById("imageModal");
-            modal.style.display = "flex";
-            modal.classList.add('show');
-        }
-
-        function changeImage(direction) {
-            currentImageIndex += direction;
-            if (currentImageIndex < 0) {
-                currentImageIndex = images.length - 1;
-            } else if (currentImageIndex >= images.length) {
-                currentImageIndex = 0;
-            }
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
-        }
-
-        function updateModalContent(imageSrc, captionText) {
-            document.getElementById("fullImage").src = imageSrc;
-            document.getElementById("modalCaption").innerText = captionText;
-        }
-
-        function closeModal() {
-            const modal = document.getElementById("imageModal");
-            modal.style.display = "none";
-            modal.classList.remove('show');
-        }
-
-        document.getElementById("imageModal").addEventListener("click", function (e) {
-            if (e.target === document.getElementById("imageModal")) {
-                closeModal();
+        // Adjust image size dynamically based on viewport width
+        imageItems.forEach(item => {
+            if (windowWidth > 1200) {
+                // Large screens (desktops)
+                item.style.width = '25vw';
+                item.style.height = '25vw';
+            } else if (windowWidth > 768) {
+                // Medium screens (tablets)
+                item.style.width = '30vw';
+                item.style.height = '30vw';
+            } else if (windowWidth > 480) {
+                // Smaller screens (large phones)
+                item.style.width = '40vw';
+                item.style.height = '40vw';
+            } else {
+                // Extra small screens (small phones)
+                item.style.width = '50vw';
+                item.style.height = '50vw';
             }
         });
+    }
 
-        // Prevent right-click to stop downloading images
-        document.querySelectorAll('img').forEach(image => {
-            image.addEventListener('contextmenu', (event) => {
-                event.preventDefault();
-                alert('Right-click is disabled. Image download is not allowed.');
-            });
+    // Listen for window resize events and adjust image sizes
+    window.addEventListener('resize', adjustImageSize);
 
-            image.addEventListener('dragstart', (event) => {
-                event.preventDefault();
-            });
+    // Initial adjustment of image sizes when the page loads
+    adjustImageSize();
+
+    // Function to open the modal with full-size image and caption
+    function openModal(index) {
+        currentImageIndex = index;
+        const { src, caption } = images[currentImageIndex];
+        updateModalContent(src, caption);
+        const modal = document.getElementById("imageModal");
+        modal.style.display = "flex";
+        modal.classList.add('show');
+    }
+
+    // Function to change the image (Previous / Next)
+    function changeImage(direction) {
+        currentImageIndex += direction;
+
+        // Ensure the index is within bounds
+        if (currentImageIndex < 0) {
+            currentImageIndex = images.length - 1;
+        } else if (currentImageIndex >= images.length) {
+            currentImageIndex = 0;
+        }
+
+        const { src, caption } = images[currentImageIndex];
+        updateModalContent(src, caption);
+    }
+
+    // Function to update the modal content
+    function updateModalContent(imageSrc, captionText) {
+        document.getElementById("fullImage").src = imageSrc;
+        document.getElementById("modalCaption").innerText = captionText;
+    }
+
+    // Function to close the modal
+    function closeModal() {
+        const modal = document.getElementById("imageModal");
+        modal.style.display = "none";
+        modal.classList.remove('show');
+    }
+
+    // Close the modal when clicking outside the modal content
+    document.getElementById("imageModal").addEventListener("click", function (e) {
+        if (e.target === document.getElementById("imageModal")) {
+            closeModal();
+        }
+    });
+
+    // Prevent right-click to stop downloading images
+    document.querySelectorAll('img').forEach(image => {
+        image.addEventListener('contextmenu', (event) => {
+            event.preventDefault();
+            alert('Right-click is disabled. Image download is not allowed.');
         });
-    </script>
+
+        // Prevent image dragging
+        image.addEventListener('dragstart', (event) => {
+            event.preventDefault();
+        });
+    });
+</script>
+
 
 </body>
 </html>
