--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -43,8 +43,8 @@
             cursor: pointer;
             border-radius: 8px;
             overflow: hidden;
-            width: 200px;  /* Fixed width for all images */
-            height: 200px; /* Fixed height for all images */
+            width: 200px; /* Fixed width for all images */
+            height: auto; /* Let the height adjust based on image aspect ratio */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -53,7 +53,7 @@
 
         .image-item img {
             width: 100%;
-            height: 100%;
+            height: auto; /* Keep aspect ratio intact */
             object-fit: cover; /* Ensures that the image covers the entire container without distortion */
             border-radius: 8px;
         }
@@ -99,7 +99,8 @@
 
         .modal-content img {
             width: 100%;
-            height: auto;
+            max-height: 80vh; /* Ensures image does not exceed the viewport height */
+            object-fit: contain; /* Ensure the image maintains its aspect ratio */
             border-radius: 8px;
         }
 
@@ -134,14 +135,14 @@
         @media (max-width: 768px) {
             .image-item {
                 width: 150px; /* Adjusted for tablet or medium-sized screens */
-                height: 150px; /* Same height */
+                height: auto; /* Let height adjust based on image aspect ratio */
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
                 width: 120px; /* Adjusted for smaller mobile screens */
-                height: 120px; /* Same height */
+                height: auto; /* Let height adjust based on image aspect ratio */
             }
         }
 
