--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -186,23 +186,50 @@
     <div class="image-gallery">
         <div class="image-item" onclick="openModal(0)">
             <img src="./gallery/aa.jpg" alt="Image 1">
-            <img src="./gallery/aa.jpg" alt="Image 2">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/kk.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/jj.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/ii.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/hh.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/gg.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/ff.jpg" alt="Image 1">
+            <div class="caption">Caption for Image 1</div>
+        </div>
+         <div class="image-item" onclick="openModal(0)">
+            <img src="./gallery/ee.jpg" alt="Image 1">
             <div class="caption">Caption for Image 1</div>
         </div>
         <div class="image-item" onclick="openModal(1)">
-            <img src="./gallery/aa.jpg" alt="Image 2">
+            <img src="./gallery/ee.jpg" alt="Image 2">
             <div class="caption">Caption for Image 2</div>
         </div>
         <div class="image-item" onclick="openModal(2)">
-            <img src="./gallery/jj.jpg" alt="Image 3">
+            <img src="./gallery/dd.jpg" alt="Image 3">
             <div class="caption">Caption for Image 3</div>
         </div>
         <div class="image-item" onclick="openModal(3)">
-            <img src="./gallery/kk.jpg" alt="Image 4">
+            <img src="./gallery/cc.jpg" alt="Image 4">
             <div class="caption">Caption for Image 4</div>
         </div>
         <div class="image-item" onclick="openModal(4)">
-            <img src="images/jj.jpg" alt="Image 5">
+            <img src="images/bb.jpg" alt="Image 5">
             <div class="caption">Caption for Image 5</div>
         </div>
         <!-- More Images... -->
@@ -223,10 +250,18 @@
         let currentImageIndex = 0;
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 5" }
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 13" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 12" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 11" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 10" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 7" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 6" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 2" }
         ];
 
         // Function to open the modal with full-size image and caption
