--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -95,8 +95,8 @@
 
         .modal-content {
             position: relative;
-            max-width: 90%;
-            max-height: 90%;
+            max-width: 70%; /* Reduced from 90% to 70% */
+            max-height: 70%; /* Reduced from 90% to 70% */
         }
 
         .modal-content img {
